--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.4.3",
     "prettier": "^3.6.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
